# palc

./: Cargo.toml  README.md  bench.sh  bench.txt  check_size.sh
clap-static-derive/: Cargo.toml
clap-static-derive/src/: common.rs  derive_args.rs  derive_parser.rs  derive_subcommand.rs  derive_value_enum.rs  lib.rs  tests.rs
compile-bench/: Cargo.toml
compile-bench/src/: main.rs
derive/: Cargo.toml
derive/src/: common.rs  derive_args.rs  derive_subcommand.rs  derive_value_enum.rs  lib.rs  shared.rs  tests.rs
examples/: criterion-argh.rs  criterion-clap.rs  criterion-palc.rs  criterion-static.rs  deno-clap.rs  deno-palc.rs  deno-static.rs  hello-world.rs  simple-argh.rs  simple-clap.rs  simple-none.rs  simple-palc.rs  simple-static.rs
examples/util/: criterion.rs  deno.rs  simple.rs
src/: error.rs  help.rs  internal.rs  lib.rs  refl.rs  runtime.rs  shared.rs  values.rs
tests/: parse.rs  smoke.rs
