[package]
name = "palc"
version = "0.1.0"
edition = "2024"

[features]
default = ["derive", "help"]
help = []
derive = ["dep:palc-derive"]

__test-allow-unknown-fields = ["palc-derive/__test-allow-unknown-fields"]

[dependencies]
os_str_bytes = { version = "7.1.0", default-features = false, features = ["raw_os_str"] }
ref-cast = "1.0.24"

[dependencies.palc-derive]
path = "./derive"
optional = true

[[example]]
name = "deno-static"
required-features = ["__test-allow-unknown-fields"]

[dev-dependencies]
argh = { version = "0.1.13", default-features = false }
clap = { version = "4.5.35", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
palc-derive.path = "./derive"

[lints.clippy]
dbg-macro = "warn"
# TODO: todo = "warn"

[workspace]
members = [".", "derive", "compile-bench"]

[profile.minimal]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
