[workspace]
members = [".", "derive", "compile-bench"]

[workspace.package]
repository = "https://github.com/oxalica/palc"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]
keywords = ["argument", "cli", "arg", "argument", "clap"]

[package]
name = "palc"
version = "0.0.1"
description = "WIP: Command Line Argument Parser with several opposite design goal from Clap"
exclude = ["*.sh"] # Shortcut scripts.
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["derive", "help"]
help = []
derive = ["dep:palc-derive"]

__test-allow-unknown-fields = ["palc-derive/__test-allow-unknown-fields"]

[dependencies]
os_str_bytes = { version = "7.1.0", default-features = false, features = ["raw_os_str"] }
ref-cast = "1.0.24"

[dependencies.palc-derive]
path = "./derive"
version = "0.0.1"
optional = true

[[example]]
name = "deno-palc"
required-features = ["__test-allow-unknown-fields"]

[dev-dependencies]
argh = { version = "0.1.13", default-features = false }
clap = { version = "4.5.35", default-features = false, features = ["std", "derive", "error-context", "help", "usage"] }
expect-test = "1.5.1"
palc-derive.path = "./derive"

[lints.clippy]
dbg-macro = "warn"
# TODO: todo = "warn"

[profile.minimal]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true
