[package]
name = "clap-static-derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
__test-allow-unknown-fields = []

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["derive"] }

[dev-dependencies]
prettyplease = "0.2.32"
