[package]
name = "palc-derive"
version = "0.0.1"
description = "Derive macros for palc. Use the re-exports from palc intead."
readme = false
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["derive"] }

[dev-dependencies]
prettyplease = "0.2.32"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

dbg-macro = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"

# Match sometimes gives more consistency and symmetry.
single_match_else = "allow"
# Configuration structs contain many bools because of interface complexity.
struct_excessive_bools = "allow"
# Parsing and codegen does not really benefit from spliting out.
too_many_lines = "allow"
# index as u8
cast_possible_truncation = "allow"
